--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@supabase/supabase-js": "^2.49.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "react": "^19.0.0",
